Fix Bug that allowed to press start stretching mutliple times und Layout-Anpassungen

--- a/style/style.css
+++ b/style/style.css
@@ -1,48 +1,62 @@
 body {
-    font-family: Arial, sans-serif;
-    text-align: center;
+	font-family: Arial, sans-serif;
+	text-align: center;
+	margin: 0;
+	padding: 0;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+
+.main {
+	margin-top: 10vh;
+	height: 33vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
 }
 
 h1 {
-    color: #333;
+	color: #333;
 }
 
 .credits {
-    font-size: 0.8rem;
-    color: #666;
+	font-size: 0.8rem;
+	color: #666;
 }
 
 a:link {
-    color: #2d2849;
-    text-decoration: none;
+	color: #2d2849;
+	text-decoration: none;
 }
 
 button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    margin: 10px;
-    cursor: pointer;
-    border-radius: 5px;
+	padding: 30px 20px;
+	background-color: #007bff;
+	color: #fff;
+	border: none;
+	margin: 10px;
+	cursor: pointer;
+	border-radius: 5px;
 }
 
 #countdown {
-    font-size: 24px;
-    margin: 20px;
-    font-weight: bold;
+	font-size: 24px;
+	margin: 20px;
+	font-weight: bold;
 }
 
 @media only screen and (max-width: 600px) {
-    button {
-        width: 80%;
-    }
+	button {
+		width: 80%;
+	}
 }
